<select> drop arrow hard to see with non-native theme
Categories
(Core :: Widget, defect)
Tracking
()
People
(Reporter: sam, Assigned: emilio)
References
Details
Attachments
(3 files)
1.46 KB,
image/png
|
Details | |
218 bytes,
text/html
|
Details | |
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
When using the non-native theme, the drop arrow on <select> elements is now shown on top of the background color of the control, rather than having a visible button. This means that the arrow is now very hard or impossible to see with certain background colors.
I compared the behavior with Chrome, and they seem to use the foreground color for their drop arrow, so it is always easily seen.
Reporter | ||
Comment 1•5 years ago
|
||
This is the example from the comparison above.
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 2•4 years ago
|
||
As its background might not be themed.
Updated•4 years ago
|
Assignee | ||
Comment 3•4 years ago
|
||
Comment on attachment 9222127 [details]
Bug 1690954 - Draw the menulist arrow button using currentColor rather than a fixed color. r=jfkthame,spohl
Beta/Release Uplift Approval Request
- User impact if declined: Comment 0
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Trivial color change to match the text color of the
<select>
. - String changes made/needed: none
Assignee | ||
Updated•4 years ago
|
Comment 4•4 years ago
•
|
||
Comment on attachment 9222127 [details]
Bug 1690954 - Draw the menulist arrow button using currentColor rather than a fixed color. r=jfkthame,spohl
Low risk and a fix for an issue that may become very visible as we are now shipping non-native form theming, approved for 89 beta 14 after it has landed on mozilla-central, thanks.
Comment 6•4 years ago
|
||
Low risk and a fix for an issue that may become very visible as we are now shipping non-native form theming, approved for 89 beta 14 after it has landed on mozilla-central, thanks.
In that case, setting Beta status-firefox89=affected.
![]() |
||
Comment 7•4 years ago
|
||
bugherder |
Updated•4 years ago
|
Comment 8•4 years ago
|
||
This fix was reproduced and verified in Nightly v90.0a1, builds before and after the fix on WIndows 10, Mac OS 11.3.1 and Ubuntu 20. The arrow on the button is now showing the correct color.
Waiting for the fix to be uplifted.
Comment 9•4 years ago
|
||
bugherder uplift |
Comment 10•4 years ago
|
||
Confirmed as fixed on Beta v89.0b14 on Windows 10, Mac OS 11.3.1 and Ubuntu 20.
Description
•