Bug 1690954 - Draw the menulist arrow button using currentColor rather than a fixed color. r=jfkthame

As its background might not be themed.

Differential Revision: https://phabricator.services.mozilla.com/D115194