widget/nsNativeBasicTheme.h
@@ -212,8 +212,6 @@ class nsNativeBasicTheme : protected nsNativeTheme, public nsITheme {
   std::pair<sRGBColor, sRGBColor> ComputeProgressTrackColors(UseSystemColors);
   std::pair<sRGBColor, sRGBColor> ComputeMeterchunkColors(
       const EventStates& aMeterState, UseSystemColors);
-  sRGBColor ComputeMenulistArrowButtonColor(const EventStates&,
-                                            UseSystemColors);
   std::array<sRGBColor, 3> ComputeFocusRectColors(const AccentColor&,
                                                   UseSystemColors);
 
